Bug 1673208 - [MIPS] Handle non-register input in visitWasmSelect. r=lth

The falseExpr of LWasmSelect may not be register value on mips,
we shouldn't just use it as a register.

Differential Revision: https://phabricator.services.mozilla.com/D95985